<resources>
    <string name="app_name">exercises03</string>
    <string name="fab_icon">Create new habit</string>
    <string name="habitName">Enter the name of the habit</string>
    <string name="habitDescription">Enter description</string>
    <string name="habitType1">Sport</string>
    <string name="habitType2">Study</string>
    <string name="habitType3">Music</string>
    <string name="habitAmount">Enter amount of habit execution</string>
    <string name="habitFrequency">Enter frequency of habit execution</string>
    <string name="save">Save</string>
    <string name="freq_day">times in a day</string>
    <string name="freq_week">times in a week</string>
    <string name="freq_month">times in a month</string>
    <string name="freq_year">times in a year</string>
    <string name="choose_color">Choose Color</string>
    <string name="nav_home">Home</string>
    <string name="nav_app_info">Information</string>
    <string name="close_drawer">close drawer</string>
    <string name="open_drawer">open drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>